fixing files and adding packages

--- a/package.json
+++ b/package.json
@@ -27,7 +27,16 @@
     "url": "https://github.com/motdotla/dotenv/issues"
   },
   "bundleDependencies": false,
-  "dependencies": {},
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.5"
+  },
   "deprecated": false,
   "description": "Loads environment variables from .env file",
   "devDependencies": {
